tests/neg-custom-args/captures/erased-methods2.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/erased-methods2.scala:20:4 -------------------------------
20 |  = (x$1: CT[Ex3]^)  // error
   |    ^
   |Found:    (erased x$1: CT[Ex3]^) ?->? (erased x$2: CT[Ex2]^?) ?->{x$1} Unit
   |Required: (erased x$1: CT[Ex3]^) ?=> (erased x$2: CT[Ex2]^) ?=>² Unit
   |
   |where:    ?=>  refers to a fresh root capability in the result type of method foo9a
   |          ?=>² refers to a root capability associated with the result type of (using erased x$1: CT[Ex3]^): (erased x$2: CT[Ex2]^) ?=>² Unit
   |          ^    refers to the universal root capability
   |
   |Note that capability x$1.type is not included in capture set {<cap of (using erased x$1: CT[Ex3]^): (erased x$2: CT[Ex2]^?) ?->{x$1} Unit>}.
21 |     ?=> (x$2: CT[Ex2]^)
22 |     ?=>
23 |      //given (CT[Ex3]^) = x$1
24 |      Throw(new Ex3)
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/erased-methods2.scala:31:4 -------------------------------
31 |  = (erased x$1: CT[Ex3]^) // error
   |    ^
   |Found:    (erased x$1: CT[Ex3]^) ?->? (erased x$1: CT[Ex2]^?) ?->{x$1} (erased x$2: CT[Ex1]^?) ?->{x$1} Unit
   |Required: (erased x$1: CT[Ex3]^) ?=> (erased x$1: CT[Ex2]^) ?=>² (erased x$2: CT[Ex1]^) ?=>³ Unit
   |
   |where:    ?=>  refers to a fresh root capability in the result type of method foo10a
   |          ?=>² refers to a root capability associated with the result type of (using erased x$1: CT[Ex3]^): (erased x$1: CT[Ex2]^) ?=>² (erased x$2: CT[Ex1]^) ?=>³ Unit
   |          ?=>³ refers to a root capability associated with the result type of (using erased x$1: CT[Ex2]^): (erased x$2: CT[Ex1]^) ?=>³ Unit
   |          ^    refers to the universal root capability
   |
   |Note that capability x$1.type is not included in capture set {<cap of (using erased x$1: CT[Ex3]^): (erased x$1: CT[Ex2]^?) ?->{x$1} (erased x$2: CT[Ex1]^?) ?->{x$1} Unit>}.
32 |     ?=> (erased x$2: CT[Ex2]^)
33 |     ?=> (erased x$3: CT[Ex1]^)
34 |     ?=> Throw(new Ex3)
   |
   | longer explanation available when compiling with `-explain`
